--- a/css/components/toggle.css
+++ b/css/components/toggle.css
@@ -11,6 +11,11 @@
   }
   
   .toggle-content.active {
-    padding: 1rem;      
-    opacity: 1
+    position: relative;
+    padding: 1rem;
+    opacity: 1;
+    max-height: 3000px;
+    overflow: visible;
+    position: relative;
+    z-index: 3;            
   }
